--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-name = "zero2prod"
+name = "rust_server"
 version = "0.1.0"
-authors = ["LukeMathWalker <rust@lpalmieri.com>"]
+authors = ["Michele Xiloyannis"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
 path = "src/main.rs"
-name = "zero2prod"
+name = "rust_server"
 
 [dependencies]
 actix-web = "4"
