--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -74,7 +74,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install postgresql-client -y
 
       - name: Migrate database
-        run: chmod +x /scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
+        run: chmod +x ./scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
 
       - name: Run tests
         run: cargo test
@@ -123,7 +123,7 @@ jobs:
       - name: Install postgresql-client
         run: sudo apt-get update && sudo apt-get install postgresql-client -y
       - name: Migrate database
-        run: chmod +x /scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
+        run: chmod +x ./scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Linting
         run: cargo clippy -- -D warnings
 
@@ -157,6 +157,6 @@ jobs:
           --no-default-features
           --locked
       - name: Migrate database
-        run: chmod +x /scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
+        run: chmod +x ./scripts/init_db.sh && SKIP_DOCKER=true ./scripts/init_db.sh
       - name: Generate code coverage
         run: cargo install cargo-tarpaulin && cargo tarpaulin --verbose --workspace
