--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -18,9 +18,21 @@ env:
   SQLX_VERSION: 0.7.1
   SQLX_FEATURES: "rustls,postgres"
 
-# A workflow run is made up of one or more jobs, which run in parallel by default
-# Each job runs in a runner environment specified by runs-on
 jobs:
+  lint:
+    name: ✅Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt, clippy
+      - name: Enforce formatting
+        run: cargo fmt --check
+
+      - name: Enforce linting
+        run: cargo clippy
+        
   test:
     name: 🧪Test
     runs-on: ubuntu-latest
@@ -66,17 +78,5 @@ jobs:
       - name: Generate code coverage
         run: cargo install cargo-tarpaulin && cargo tarpaulin --verbose --workspace
 
-  fmt:
-    name: ✅Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt, clippy
-      - name: Enforce formatting
-        run: cargo fmt --check
-
-      - name: Enforce linting
-        run:  cargo clippy -- -D warnings
+  
 
