--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -22,6 +22,16 @@ jobs:
   lint:
     name: ✅Lint
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
+
+        ports:
+          - 5432:5432    
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
