feat: replaced logging with tracing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["clock"], default-features = false}
 env_logger = "0.10"
 log = "0.4"
+tracing = { version = "0.1", features = ["log"] }
 
 [dependencies.sqlx]
 version = "0.7"
