--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,12 @@ serde = { version = "1", features = ["derive"] }
 config = "0.13"
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["clock"], default-features = false}
-env_logger = "0.10"
-log = "0.4"
 tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.2"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing-actix-web = "0.7"
 
 [dependencies.sqlx]
 version = "0.7"
@@ -36,3 +39,4 @@ features = [
 
 [dev-dependencies]
 reqwest = "0.11"
+once_cell = "1.19"
